--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,45 +1,21 @@
-<div class="card" style="width: 18rem;">
-  <div class="form">
-    <div class="container">
-
-      <div class="row">
-        <input type="text" name="" placeholder="" class="textbox">
-        <label class="form-label">Email</label>
-      </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col">
+      <img src="../assets/laptop.jpg" alt="">
+    </div>
+    <div class="col active">
+      <h1 style="font-weight: normal;">Login</h1>
+      <p>bchandravamsireddy@gmail.com</p>
     </div>
   </div>
-
-  <div class="forms">
-    <div class="container">
-      <div class="row">
-        <input type="text1" name="" placeholder="" class="textbox1">
-        <label class="form-label1">password</label>
+</div>
+<div class="register-form">
+  <!-- <form [formGroup]="form" (ngSubmit)="onsubmit()">
+    <div class="form-group">
+        <input type="text" formControlName="Email" class="form-control"[ngClass]="{'is-invalid': submitted && f['Email'].errors}"/>
+        <div *ngIf="submitted && f['Email'].errors" class="invalid-feedback">
+          <div *ngIf="f['Email'].errors['required']">Email is required</div>
+        </div>
       </div>
-      <div class="password">
-     <a href="https:www.signup.com">forgotpassword</a>
-      </div>
-      <div>
-        <button class="button"><a href="https:www.login.com">Login</a></button>
-      </div>
-    </div>
-  </div>
-   <div class="signup">
-        <span>Don't have an account yet! <a href="https:www.sign up .com">Sign up</a></span> 
-   </div>
-   <div class="with">
-    <span>OR</span>
-    </div>
-    <div class="log">
-    <span>Login With</span>
-   </div>
-      
-
-  
-     <div >
-      <button class="buttons"><a href="https:www.facebook.com" style="color: white;"> F facebook</a></button>
-     </div>
-     <div>
-      <button class="google"><a href="https:www.google.com" style="color: black;">G Google</a></button>
-     </div>
-   
+  </form> -->
 </div>
